<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_save"
        android:icon="@drawable/save_icon"
        android:title="@string/save_sketch"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_exit"
        android:icon="@drawable/new_icon"
        android:title="@string/item_exit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_rename"
        android:icon="@drawable/edit_icon"
        android:title="@string/rename_sketch"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/delete_icon"
        android:title="@string/delete_sketch"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_export"
        android:icon="@drawable/export_icon"
        android:title="@string/export_sketch"
        app:showAsAction="never"/>
</menu>